# skein-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
container/: build  push  shell
src/: client.rs  lib.rs  logging.rs  responder.rs  rpc.rs  worker.rs
src/amqp/: client.rs  mod.rs  worker.rs
